[package]
name = "imagesorter"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
walkdir = "2.4"
kamadak-exif = "0.5"
bytes = "1.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
md-5 = "0.10"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
num_cpus = "1.16"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
